add jetstream
